--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <style>
+        body{
+            font-size: 24px;
+      font-weight: bold;
+      color: #333;
+             background-color: bisque;
+        }
+  </style>
 </head>
 <body>
     <h1>Hola</h1>
