--- a/index.html
+++ b/index.html
@@ -1,15 +1,298 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Cultura y Deporte SUNTUAP</title>
     <link rel="stylesheet" href="style.css">
-    <style>
-  </style>
 </head>
+
 <body>
-    <h1>Hola</h1>
-  <p>Parrafo</p>
+    <header class="header">
+        <div class="grid show">
+            <!--SUNTUAP ICON-->
+            <div class="column">
+                <a href="https://www.suntuapweb.com/"><img src="suntuap.png" alt="logo_suntuap" class="logo"></a>
+            </div>
+
+            <!--MENU-->
+            <div class="center_div">
+                <div class="nav">
+                    <ul class="nav_ul">
+                        <li class="nav_li nav_menu">
+                            <a class="nav_a" href="index.html">Inicio</a>
+                        </li>
+                        <li class="nav_li nav_menu">
+                            <a class="nav_a" href="#">¿Quiénes somos?</a>
+                        </li>
+
+                        <li class="nav_li nav_menu">
+                            <div class="dropdown">
+                                <button class="dropbtn">Cultura</button>
+                                <div class="dropdown-content">
+                                    <a href="https://www.consermuspue.edu.mx/">Benemérito Conservatorio de Música del
+                                        Estado de Puebla</a>
+                                    <a href="https://casadeljubilado.buap.mx/">Casa del Jubilado</a>
+                                    <a href="https://www.complejocultural.buap.mx/">Complejo Cultural Universitario</a>
+                                    <a href="https://descargacultura.unam.mx/">Descarga Cultura UNAM</a>
+                                    <a href="http://www.dau.buap.mx/">Dirección de Acompañamiento Universitario</a>
+                                    <a href="https://artes.buap.mx/">Facultad de Artes</a>
+                                    <a href="https://www.facebook.com/IMACP/?locale=es_LA">Instituto Municipal de Arte y
+                                        Cultura</a>
+                                    <a href="https://sc.puebla.gob.mx/">Secretaria de Cultura</a>
+                                    <a href="https://visita.pueblacapital.gob.mx">Visita Puebla Capital</a>
+                                    <a href="https://cultura.buap.mx/">Vicerrectoría de Extensión y Difusión de la
+                                        Cultura</a>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="nav_li nav_menu">
+                            <div class="dropdown">
+                                <button class="dropbtn">Deporte</button>
+                                <div class="dropdown-content">
+                                    <a href="https://didecufi.buap.mx/">Dirección de Cultura Física</a>
+                                    <a href="https://imd.pueblacapital.gob.mx/">Instituto Municipal del Deporte</a>
+                                    <a href="https://inpode.puebla.gob.mx/">Instituto Poblano del Deporte</a>
+                                </div>
+                            </div>
+                        </li>
+
+
+                        <li class="nav_li nav_menu">
+                            <a class="nav_a" href="#">Plan de Trabajo</a>
+                        </li>
+                        <li class="nav_li nav_menu">
+                            <a class="nav_a" href="#">Contacto</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+
+            <!--SOCIAL MEDIA-->
+            <div class="column right_div show_social">
+                <div class="nav">
+                    <ul class="nav_ul">
+                        <li class="nav_li">
+                            <a target="_blank" href="#">
+                                <img class="social_media_button" src="fb_icon.png" alt="facebook button">
+                            </a>
+                        </li>
+                        <li class="nav_li">
+                            <a target="_blank" href="https://www.instagram.com/cultura_y_deporte_suntuap/">
+                                <img class="social_media_button" src="ig_icon.png" alt="instagram button">
+                            </a>
+                        </li>
+                        <li class="nav_li">
+                            <a target="_blank" href="#">
+                                <img class="social_media_button" src="x_icon.png" alt="facebook button">
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+
+        <!--MOBILE HEADER-->
+        <div class="mobile_header x_flex">
+            <!--SUNTUAP ICON-->
+            <div>
+                <a href="https://www.suntuapweb.com/"><img src="suntuap.png" alt="logo_suntuap" class="logo"></a>
+            </div>
+
+            <div>
+                <div class="off_menu">
+                    <div class="list_menu">
+                        <ul class="nav_ul">
+                            <li class="menu_li">
+                                <a class="nav_a" href="index.html">Inicio</a>
+                            </li>
+                            <li class="menu_li">
+                                <a class="nav_a" href="#">¿Quiénes somos?</a>
+                            </li>
+
+                            <li class="menu_li">
+                                <a class="nav_a" id="submenu">Cultura +</a>
+
+                                <ul class="nav_ul submenu">
+                                    <li class="submenu_li">
+                                        <a class="nav_a" href="https://www.consermuspue.edu.mx/">Benemérito
+                                            Conservatorio de Música del Estado de Puebla</a>
+                                    </li>
+                                    <li class="submenu_li">
+                                        <a class="nav_a" href="https://casadeljubilado.buap.mx/">Casa del Jubilado</a>
+                                    </li>
+                                    <li class="submenu_li">
+                                        <a class="nav_a" href="https://www.complejocultural.buap.mx/">Complejo Cultural
+                                            Universitario</a>
+                                    </li>
+                                    <li class="submenu_li">
+                                        <a class="nav_a" href="https://descargacultura.unam.mx/">Descarga Cultura
+                                            UNAM</a>
+                                    </li>
+                                    <li class="submenu_li">
+                                        <a class="nav_a" href="http://www.dau.buap.mx/">Dirección de Acompañamiento
+                                            Universitario</a>
+                                    </li>
+                                    <li class="submenu_li">
+                                        <a class="nav_a" href="https://artes.buap.mx/">Facultad de Artes</a>
+                                    </li>
+                                    <li class="submenu_li">
+                                        <a class="nav_a" href="https://www.facebook.com/IMACP/?locale=es_LA">Instituto
+                                            Municipal de Arte y Cultura</a>
+                                    </li>
+                                    <li class="submenu_li">
+                                        <a class="nav_a" href="https://sc.puebla.gob.mx/">Secretaria de Cultura</a>
+                                    </li>
+                                    <li class="submenu_li">
+                                        <a class="nav_a" href="https://visita.pueblacapital.gob.mx">Visita Puebla
+                                            Capital</a>
+                                    </li>
+                                    <li class="submenu_li">
+                                        <a class="nav_a" href="https://cultura.buap.mx/">Vicerrectoría de Extensión y
+                                            Difusión de la Cultura</a>
+                                    </li>
+                                </ul>
+                            </li>
+
+                            <li class="menu_li">
+                                <a class="nav_a" id="submenu2">Deporte +</a>
+
+                                <ul class="nav_ul submenu2">
+                                    <li class="submenu_li">
+                                        <a class="nav_a" href="https://didecufi.buap.mx/">Dirección de Cultura
+                                            Física</a>
+                                    </li>
+                                    <li class="submenu_li">
+                                        <a class="nav_a" href="https://imd.pueblacapital.gob.mx/">Instituto Municipal
+                                            del Deporte</a>
+                                    </li>
+                                    <li class="submenu_li">
+                                        <a class="nav_a" href="https://inpode.puebla.gob.mx/">Instituto Poblano del
+                                            Deporte</a>
+                                    </li>
+                                </ul>
+                            </li>
+                            <li class="menu_li">
+                                <a class="nav_a" href="#">Plan de Trabajo</a>
+                            </li>
+                            <li class="menu_li">
+                                <a class="nav_a" href="#">Contacto</a>
+                            </li>
+                            <li class="menu_li">
+                                <ul class="nav_ul">
+                                    <li class="nav_li">
+                                        <a target="_blank" href="#">
+                                            <img class="social_media_button" src="fb_icon.png" alt="facebook button">
+                                        </a>
+                                    </li>
+                                    <li class="nav_li">
+                                        <a target="_blank" href="https://www.instagram.com/cultura_y_deporte_suntuap/">
+                                            <img class="social_media_button" src="ig_icon.png" alt="instagram button">
+                                        </a>
+                                    </li>
+                                    <li class="nav_li">
+                                        <a target="_blank" href="#">
+                                            <img class="social_media_button" src="x_icon.png" alt="x button">
+                                        </a>
+                                    </li>
+                                </ul>
+                            </li>
+
+                        </ul>
+                    </div>
+                </div>
+
+                <div class="menu">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </div>
+            </div>
+
+        </div>
+    </header>
+    <main class="main">
+        <div>
+            <h1>Secretaria de Cultura y Deporte SUNTUAP</h1>
+        </div>
+        <div class="show">
+            <div class="slideshow-container">
+                <div class="mySlides fade">
+                    <img src="B1.png" style="width:100%">
+                </div>
+
+                <div class="mySlides fade">
+                    <img src="B2.png" style="width:100%">
+                </div>
+
+                <div class="mySlides fade">
+                    <img src="B3.png" style="width:100%">
+                </div>
+            </div>
+            <div style="text-align:center">
+                <span class="dot"></span>
+                <span class="dot"></span>
+                <span class="dot"></span>
+            </div>
+        </div>
+    </main>
+
+    <script>
+        const menu = document.querySelector('.menu');
+        const offScreenMenu = document.querySelector('.off_menu');
+        menu.addEventListener('click', () => {
+            menu.classList.toggle('active');
+            offScreenMenu.classList.toggle('active');
+        })
+
+
+        const submenuTrigger = document.getElementById('submenu'); // Obtiene el elemento con ID "submenu"
+        const submenu = document.querySelector('.submenu'); // Obtiene el elemento con clase "submenu"
+        submenuTrigger.addEventListener('click', (event) => {
+            event.preventDefault(); // Evita que el enlace cargue una nueva página
+            submenu.classList.toggle('active'); // Alterna la clase "active"
+        });
+
+        const submenuTrigger2 = document.getElementById('submenu2');
+        const submenu2 = document.querySelector('.submenu2');
+        submenuTrigger2.addEventListener('click', (event) => {
+            event.preventDefault();
+            submenu2.classList.toggle('active');
+        });
+
+        let slideIndex = 0;
+        showSlides();
+
+        function showSlides() {
+            let i;
+            let slides = document.getElementsByClassName("mySlides");
+            let dots = document.getElementsByClassName("dot");
+            for (i = 0; i < slides.length; i++) {
+                slides[i].style.display = "none";
+            }
+            slideIndex++;
+            if (slideIndex > slides.length) { slideIndex = 1 }
+            for (i = 0; i < dots.length; i++) {
+                dots[i].className = dots[i].className.replace(" active_dot", "");
+            }
+            slides[slideIndex - 1].style.display = "block";
+            dots[slideIndex - 1].className += " active_dot";
+            setTimeout(showSlides, 3500); // Change image every 2 seconds
+        }
+    </script>
+    <footer class="footer align_center">
+        <div class="column"><img class="logo_footer" src="suntuap.png" alt=""></div>
+        <div class="column">
+            <p class="subtitle">Secretaria de Cultura y Deporte SUNTUAP</p>
+            <p class="footer_info">Av. 21 Oriente #11 El Carmen, 72530. Puebla, Puebla</p>
+            <P class="footer_info">culturaydeportesuntuap@gmail.com</P>
+            <p class="footer_info">Telefono: +52 xxxxxxxxx</p>
+        </div>
+        <div class="column">
+
+        </div>
+    </footer>
 </body>
+
 </html>
