--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                             <a class="nav_a" href="index.html">Inicio</a>
                         </li>
                         <li class="nav_li nav_menu">
-                            <a class="nav_a" href="#">¿Quiénes somos?</a>
+                            <a class="nav_a" href="us.html">¿Quiénes somos?</a>
                         </li>
 
                         <li class="nav_li nav_menu">
@@ -60,7 +60,7 @@
 
 
                         <li class="nav_li nav_menu">
-                            <a class="nav_a" href="#">Plan de Trabajo</a>
+                            <a class="nav_a" href="pt.html">Plan de Trabajo</a>
                         </li>
                         <li class="nav_li nav_menu">
                             <a class="nav_a" href="#">Contacto</a>
@@ -84,8 +84,8 @@
                             </a>
                         </li>
                         <li class="nav_li">
-                            <a target="_blank" href="#">
-                                <img class="social_media_button" src="x_icon.png" alt="facebook button">
+                            <a target="_blank" href="https://www.youtube.com/channel/UC27olJnhPOPhanRlvnBBHOg">
+                                <img class="social_media_button" src="yt_icon.png" alt="facebook button">
                             </a>
                         </li>
                     </ul>
@@ -108,7 +108,7 @@
                                 <a class="nav_a" href="index.html">Inicio</a>
                             </li>
                             <li class="menu_li">
-                                <a class="nav_a" href="#">¿Quiénes somos?</a>
+                                <a class="nav_a" href="us.html">¿Quiénes somos?</a>
                             </li>
 
                             <li class="menu_li">
@@ -174,7 +174,7 @@
                                 </ul>
                             </li>
                             <li class="menu_li">
-                                <a class="nav_a" href="#">Plan de Trabajo</a>
+                                <a class="nav_a" href="pt.html">Plan de Trabajo</a>
                             </li>
                             <li class="menu_li">
                                 <a class="nav_a" href="#">Contacto</a>
@@ -192,8 +192,8 @@
                                         </a>
                                     </li>
                                     <li class="nav_li">
-                                        <a target="_blank" href="#">
-                                            <img class="social_media_button" src="x_icon.png" alt="x button">
+                                        <a target="_blank" href="https://www.youtube.com/channel/UC27olJnhPOPhanRlvnBBHOg">
+                                            <img class="social_media_button" src="yt_icon.png" alt="x button">
                                         </a>
                                     </li>
                                 </ul>
@@ -214,8 +214,9 @@
     </header>
     <main class="main">
         <div>
-            <h1>Secretaria de Cultura y Deporte SUNTUAP</h1>
+            <h1 class="center_tittle">Secretaría de Eventos Culturales y Deportivos SUNTUAP</h1>
         </div>
+        <!--COMPUTER DISPLAY-->
         <div class="show">
             <div class="slideshow-container">
                 <div class="mySlides fade">
@@ -223,11 +224,15 @@
                 </div>
 
                 <div class="mySlides fade">
-                    <img src="B2.png" style="width:100%">
+                    <a href="https://www.complejocultural.buap.mx/" target="_blank">
+                        <img src="B2.png" style="width:100%">
+                    </a>
                 </div>
 
                 <div class="mySlides fade">
-                    <img src="B3.png" style="width:100%">
+                    <a href="https://didecufi.buap.mx/" target="_blank">
+                        <img src="B3.png" style="width:100%">
+                    </a>
                 </div>
             </div>
             <div style="text-align:center">
@@ -235,6 +240,17 @@
                 <span class="dot"></span>
                 <span class="dot"></span>
             </div>
+        </div>
+
+        <!--MAIN MOBILE-->
+        <div class="show_mobile">
+            <img class="mobile_main_img" src="MB_1.png" alt="">
+            <a href="https://www.complejocultural.buap.mx/" target="_blank">
+                <img class="mobile_main_img" src="MB_2.png">
+            </a>
+            <a href="https://didecufi.buap.mx/" target="_blank">
+                <img class="mobile_main_img" src="MB_3.png">
+            </a>
         </div>
     </main>
 
@@ -284,10 +300,10 @@
     <footer class="footer align_center">
         <div class="column"><img class="logo_footer" src="suntuap.png" alt=""></div>
         <div class="column">
-            <p class="subtitle">Secretaria de Cultura y Deporte SUNTUAP</p>
+            <p class="subtitle">Secretaría de Eventos Culturales y Deportivos SUNTUAP</p>
             <p class="footer_info">Av. 21 Oriente #11 El Carmen, 72530. Puebla, Puebla</p>
             <P class="footer_info">culturaydeportesuntuap@gmail.com</P>
-            <p class="footer_info">Telefono: +52 xxxxxxxxx</p>
+            <p class="footer_info">Telefono: +52 221 166 7758</p>
         </div>
         <div class="column">
 
