--- a/index.html
+++ b/index.html
@@ -20,14 +20,21 @@
             <div class="center_div">
                 <div class="nav">
                     <ul class="nav_ul">
-                        <li class="nav_li nav_menu">
-                            <a class="nav_a" href="index.html">Inicio</a>
+                        <li class="nav_li nav_menu ">
+                            <a class="nav_a flex_column" href="index.html">
+                                <img class="menu_icon" src="home_icon.png" alt="">
+                                Inicio
+                            </a>
                         </li>
                         <li class="nav_li nav_menu">
-                            <a class="nav_a" href="us.html">¿Quiénes somos?</a>
+                            <a class="nav_a flex_column" href="us.html">
+                                <img class="menu_icon" src="us_icon.png" alt="">
+                                Conócenos
+                            </a>
                         </li>
 
-                        <li class="nav_li nav_menu">
+                        <li class="nav_li nav_menu flex_column">
+                            <img class="menu_icon" src="world_icon.png" alt="">
                             <div class="dropdown">
                                 <button class="dropbtn">Cultura</button>
                                 <div class="dropdown-content">
@@ -47,7 +54,8 @@
                                 </div>
                             </div>
                         </li>
-                        <li class="nav_li nav_menu">
+                        <li class="nav_li nav_menu flex_column">
+                            <img class="menu_icon" src="sport_icon.png" alt="">
                             <div class="dropdown">
                                 <button class="dropbtn">Deporte</button>
                                 <div class="dropdown-content">
@@ -60,10 +68,16 @@
 
 
                         <li class="nav_li nav_menu">
-                            <a class="nav_a" href="pt.html">Plan de Trabajo</a>
+                            <a class="nav_a flex_column" href="pt.html">
+                                <img class="menu_icon" src="galley_icon.png" alt="">
+                                Galeria
+                            </a>
                         </li>
                         <li class="nav_li nav_menu">
-                            <a class="nav_a" href="#">Contacto</a>
+                            <a class="nav_a flex_column" href="#">
+                                <img class="menu_icon" src="contact_icon.png" alt="">
+                                Contacto
+                            </a>
                         </li>
                     </ul>
                 </div>
@@ -108,7 +122,7 @@
                                 <a class="nav_a" href="index.html">Inicio</a>
                             </li>
                             <li class="menu_li">
-                                <a class="nav_a" href="us.html">¿Quiénes somos?</a>
+                                <a class="nav_a" href="us.html">Conócenos</a>
                             </li>
 
                             <li class="menu_li">
@@ -174,7 +188,7 @@
                                 </ul>
                             </li>
                             <li class="menu_li">
-                                <a class="nav_a" href="pt.html">Plan de Trabajo</a>
+                                <a class="nav_a" href="pt.html">Galeria</a>
                             </li>
                             <li class="menu_li">
                                 <a class="nav_a" href="#">Contacto</a>
@@ -192,7 +206,8 @@
                                         </a>
                                     </li>
                                     <li class="nav_li">
-                                        <a target="_blank" href="https://www.youtube.com/channel/UC27olJnhPOPhanRlvnBBHOg">
+                                        <a target="_blank"
+                                            href="https://www.youtube.com/channel/UC27olJnhPOPhanRlvnBBHOg">
                                             <img class="social_media_button" src="yt_icon.png" alt="x button">
                                         </a>
                                     </li>
@@ -301,12 +316,21 @@
         <div class="column"><img class="logo_footer" src="suntuap.png" alt=""></div>
         <div class="column">
             <p class="subtitle">Secretaría de Eventos Culturales y Deportivos SUNTUAP</p>
-            <p class="footer_info">Av. 21 Oriente #11 El Carmen, 72530. Puebla, Puebla</p>
-            <P class="footer_info">culturaydeportesuntuap@gmail.com</P>
-            <p class="footer_info">Telefono: +52 221 166 7758</p>
+            <div class="left_div align_center" style="margin-bottom: 10px;">
+                <img class="footer_icon" style="height: 30px;" src="gps_icon.png" alt="">
+                <p class="footer_info">Av. 21 Oriente #11 El Carmen, 72530. Puebla, Puebla</p>
+            </div>
+            <div class="left_div align_center" style="margin-bottom: 10px;">
+                <img class="footer_icon" style="width: 30px;" src="mail_icon.png" alt="">
+                <P class="footer_info">culturaydeportesuntuap@gmail.com</P>
+            </div>
+            <div class="left_div align_center" style="margin-bottom: 10px;">
+                <img class="footer_icon" style="width: 30px;" src="wa_icon.png" alt="">
+                <P class="footer_info">+52 221 166 7758</P>
+            </div>
         </div>
-        <div class="column">
-
+        <div class="column show">
+            <h3>info</h3>
         </div>
     </footer>
 </body>
