--- a/us.html
+++ b/us.html
@@ -20,14 +20,21 @@
             <div class="center_div">
                 <div class="nav">
                     <ul class="nav_ul">
-                        <li class="nav_li nav_menu">
-                            <a class="nav_a" href="index.html">Inicio</a>
+                        <li class="nav_li nav_menu ">
+                            <a class="nav_a flex_column" href="index.html">
+                                <img class="menu_icon" src="home_icon.png" alt="">
+                                Inicio
+                            </a>
                         </li>
                         <li class="nav_li nav_menu">
-                            <a class="nav_a" href="us.html">¿Quiénes somos?</a>
+                            <a class="nav_a flex_column" href="us.html">
+                                <img class="menu_icon" src="us_icon.png" alt="">
+                                Conócenos
+                            </a>
                         </li>
 
-                        <li class="nav_li nav_menu">
+                        <li class="nav_li nav_menu flex_column">
+                            <img class="menu_icon" src="world_icon.png" alt="">
                             <div class="dropdown">
                                 <button class="dropbtn">Cultura</button>
                                 <div class="dropdown-content">
@@ -47,7 +54,8 @@
                                 </div>
                             </div>
                         </li>
-                        <li class="nav_li nav_menu">
+                        <li class="nav_li nav_menu flex_column">
+                            <img class="menu_icon" src="sport_icon.png" alt="">
                             <div class="dropdown">
                                 <button class="dropbtn">Deporte</button>
                                 <div class="dropdown-content">
@@ -60,10 +68,16 @@
 
 
                         <li class="nav_li nav_menu">
-                            <a class="nav_a" href="pt.html">Plan de Trabajo</a>
+                            <a class="nav_a flex_column" href="pt.html">
+                                <img class="menu_icon" src="galley_icon.png" alt="">
+                                Galeria
+                            </a>
                         </li>
                         <li class="nav_li nav_menu">
-                            <a class="nav_a" href="#">Contacto</a>
+                            <a class="nav_a flex_column" href="#">
+                                <img class="menu_icon" src="contact_icon.png" alt="">
+                                Contacto
+                            </a>
                         </li>
                     </ul>
                 </div>
@@ -108,7 +122,7 @@
                                 <a class="nav_a" href="index.html">Inicio</a>
                             </li>
                             <li class="menu_li">
-                                <a class="nav_a" href="us.html">¿Quiénes somos?</a>
+                                <a class="nav_a" href="us.html">Conócenos</a>
                             </li>
 
                             <li class="menu_li">
@@ -174,7 +188,7 @@
                                 </ul>
                             </li>
                             <li class="menu_li">
-                                <a class="nav_a" href="pt.html">Plan de Trabajo</a>
+                                <a class="nav_a" href="pt.html">Galeria</a>
                             </li>
                             <li class="menu_li">
                                 <a class="nav_a" href="#">Contacto</a>
@@ -192,7 +206,8 @@
                                         </a>
                                     </li>
                                     <li class="nav_li">
-                                        <a target="_blank" href="https://www.youtube.com/channel/UC27olJnhPOPhanRlvnBBHOg">
+                                        <a target="_blank"
+                                            href="https://www.youtube.com/channel/UC27olJnhPOPhanRlvnBBHOg">
                                             <img class="social_media_button" src="yt_icon.png" alt="x button">
                                         </a>
                                     </li>
@@ -222,12 +237,12 @@
                 <p class="subtitle">MISIÓN:</p>
                 <p>
                     Administrar las prestaciones de carácter cultural y deportivo que
-                     se obtengan de la BUAP, y de organismos e instituciones externas.
+                     se obtengan de la BUAP y de organismos e instituciones externas.
                 </p>
 
                 <p class="subtitle">VISIÓN:</p>
                 <p>
-                    Ser la mejor secretaria del SUNTUAP
+                    Ser la mejor secretaría del SUNTUAP
                 </p>
 
                 <p class="subtitle">PRINCIPIOS:</p>
@@ -241,6 +256,55 @@
                 <p class="text_list">Imparcialidad</p>
                 <p class="text_list">Confiabilidad </p>
                 <p class="text_list">Respeto a la libertad sindical y sus garantías</p>
+            </div>
+
+            <h2>Plan de Trabajo 2024 – 2027</h2>
+            <div>
+                <p>El plan de trabajo para la Secretaría de Actividades Culturales y Deportivas está regulado por el
+                    estatuto orgánico del SUNTUAP.</p>
+                <p class="subtitle">Se Consideran 3 ejes de atención:</p>
+                <p class="text_list">Las y los compañeros activos de nuestro sindicato.</p>
+                <p class="text_list">Las y los compañeros jubilados.</p>
+                <p class="text_list">Los habitantes del ex rancho vaquerías.</p>
+
+                <p class="subtitle">Acciones a corto plazo:</p>
+                <p class="text_list">
+                    Entablar comunicación oficial con las instancias encargadas de prestar los servicios
+                    deportivos y culturales dentro y fuera de la BUAP.
+                </p>
+                <p class="text_list">
+                    Convocar, organizar y poner en marcha la primera selección representante del SUNTUAP, en la
+                    disciplina
+                    que previo a una convocatoria entre las y los integrantes de nuestra organización se pueda
+                    conformar;
+                    esto para participar en las justas deportivas dentro y fuera de la institución.
+                </p>
+                <p class="text_list">
+                    Crear la primera selección del Residencial Ex-Rancho Vaquerías en la disciplina que previo a una
+                    convocatoria entre las y los integrantes del predio se pueda conformar; esto para participar en
+                    las justas deportivas.
+                </p>
+                <p class="text_list">
+                    Organizar y realizar de manera conjunta con las carteras correspondientes del SUNTUAP diversas
+                    actividades con tópicos de interés para la vida sindical de nuestros agremiados.
+                </p>
+                <p class="text_list">
+                    Generar reportes de manera periódica con los datos y requerimientos que se soliciten por parte
+                    de la secretaria general.
+                </p>
+
+                <p class="subtitle">Acciones a mediano plazo:</p>
+                <p class="text_list">
+                    Se contempla trabajar para construir la primera cancha deportiva de usos múltiples en los campos
+                    deportivos del Residencial Ex-Rancho Vaquerías, para que las generaciones futuras tengan un
+                    espacio digno donde ejercitar su cuerpo y su mente.
+                </p>
+                <p>
+                    El trabajo sindical es un trabajo colegiado entre las diferentes carteras y comisiones, por lo
+                    que el compromiso de la secretaría de eventos culturales y deportivos es siempre estar atento al
+                    apoyo que soliciten las demás secretarías y comisiones para crecer juntos, y poner en alto la
+                    labor del comité ejecutivo de nuestro sindicato.
+                </p>
             </div>
         </div>
     </main>
